Add react code:

--- a/JavaScript/sample.html
+++ b/JavaScript/sample.html
@@ -7,10 +7,9 @@
     <title>Sample</title>
 </head>
 <body>
-    <h1 id="demo"></h1>
-    <p>Enter number between 5 and 10: </p>
-    <input type="number" id="num" name="Number"><br>
-    <button type="button" onclick="fun1()">Submit</button>
+    <button id="b1">Status</button>
+    <div id="container">
+    </div>
     <script src="scr1.js"></script>
 </body>
 </html>
