Code of java and web update

--- a/Web/html1.html
+++ b/Web/html1.html
@@ -2,17 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css1.css">
-    <title>Document</title>
+    <title>Frames</title>
 </head>
-<body><div>
-    <div class="new_class">
-        <input type="text" id="input_here" placeholder="Add task">
-        <button id="add_it">Add</button>
-    </div>
-</div>
-    <script src="jscript.js"></script>
-</body>
+<frameset rows="10%,*"">
+    <frame src="mylinks.html" name="topFrame"/>
+    <frame src="" name="bottomFrame"/>
+</frameset>
 </html>
+
