--- a/Web/C.html
+++ b/Web/C.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles1.css" rel="stylesheet" >
 </head>
 <body>
-    <h1>C html</h1>
+    <h1>Title</h1>
+    <p>Here is the desciption</p>
+    <h3 id="id1">using id</h3>
+    <h4 class="class1">This is using class</h4>
 </body>
 </html>
