--- a/Web/html1.html
+++ b/Web/html1.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frames</title>
-</head>
-<frameset rows="10%,*"">
-    <frame src="mylinks.html" name="topFrame"/>
-    <frame src="" name="bottomFrame"/>
-</frameset>
+  <head>
+    <title>Class assignment</title>
+  </head>
+  <body>
+    <form action="A.html" method="get">
+      <label>Date<input type="date" value="2024-01-26" name="year" /></label
+      ><br />
+      <label>Month<input type="month" value="1976-10" name="month" /></label
+      ><br />
+      <label>Week<input type="week" value="2005-W43" name="week" /></label
+      ><br />
+      <label>Time<input type="time" value="22:30" name="time" /></label><br />
+      <label>Color<input type="color" value="#ffffff" /></label><br />
+      <label>lastname:<input type="text" value="Chitkara" disabled /></label
+      ><br />
+      <button type="submit">Submit Form</button>
+    </form>
+  </body>
 </html>
-
