--- a/Web/A.html
+++ b/Web/A.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles1.css" rel="stylesheet">
+    <link href="./bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="./bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div float="right">This is div container</div>
+  <div class="btn-group mx-auto block ">
+    <button class="btn btn-primary w-20">About us</button>
+    <button class="btn btn-primary">Gallery</button>
+    <button class="btn btn-primary">Sign up</button>
+    <button class="btn btn-primary">Sign In</button>
+    <button class="btn btn-primary">Contact us</button>
+  </div>
 </body>
 </html>
