--- a/Web/B.html
+++ b/Web/B.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<style>
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+th, td {
+  background-color: #96D4D4;
+}
+</style>
 </head>
 <body>
-    <table border="1">
-        <tr>
-            <th>Name</th>
-            <th>Subject</th>
-            <th>Marks</th>
-        </tr>
-        <tr>
-            <td>Jashan</td>
-            <td>OOPS</td>
-            <td>87</td>
-        </tr>
-        <tr>
-            <td>Ammy</td>
-            <td>Python</td>
-            <td>78</td>
-        </tr>
-        <tr>
-            <td>Monasavi</td>
-            <td>CASA</td>
-            <td>98</td>
-        </tr>
-        <tr>
-            <td>Niharka</td>
-            <td>BEE</td>
-            <td>89</td>
-        </tr>
-        <tr>
-            <td>Navjot</td>
-            <td>DSA</td>
-            <td>97</td>
-        </tr>
-    </table>
+
+<h2>Table With Invisible Borders</h2>
+
+<p>Style the table with white borders and a background color of the cells to make the impression of invisible borders.</p>
+
+<table style="width:100%">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th> 
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+  <tr>
+    <td>John</td>
+    <td>Doe</td>
+    <td>80</td>
+  </tr>
+</table>
+
 </body>
 </html>
+
