--- a/Web/javascript_practice/index.html
+++ b/Web/javascript_practice/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <div align="center">Navjot Singh</div>
+    <button id="play">Play</button>
+    <button id="pause">Pause</button>
+    <button id="reverse">Reverse</button>
+    <button id="print">Print</button>
+    <button id="finish">Finish</button>
+    <div id="box"></div>
 </body>
-<script type="text/javascript" src="./index.js" ></script>
+<script type="text/javascript" src="./index.js" >
+</script>
 </html>
